# random-things

./: .readthedocs.yaml  .replit  conf.py  index.rst  pyproject.toml
.github/: dependabot.yml
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/.doctrees/docs/: about.doctree  ssh.doctree
_build/_sources/: index.rst.txt
_build/docs/: about.html  ssh.html
docs/: about.rst  requirements.txt  ssh.rst
docs/linux/: ssh.rst  update.rst
